# workout-timer

./: .editorconfig  .gitignore  Dockerfile  README.md  nixpacks.toml  package.json  railway.json  requirements.txt
backend/: app.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routes/: ai.py  auth.py  workouts.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/ConfigurationMode/: AddExerciseModal.tsx  ExerciseEditor.tsx  ExerciseList.tsx  ExerciseListView.tsx  ExerciseTypeSelector.tsx  WorkoutParser.tsx  WorkoutSelector.tsx  index.tsx
frontend/src/components/WorkoutMode/: ExerciseDisplay.tsx  TimerCircle.tsx  WorkoutRunner.tsx  index.tsx
frontend/src/types/: workout.ts
